# 41068RS1-FG

./: .gitignore  INTEGRATION_COMPLETE.md  README.md  SYSTEM_TRANSFORMATION_SUMMARY.md
group18ws/: IMPROVEMENTS_README.md  QUICKSTART.md  SYSTEM_ARCHITECTURE.md
group18ws/src/41068RS12025-Group18/41068_ignition_bringup/launch/: 41068_ignition_drone.launch.py  41068_navigation.launch.py  integrated_forest_mission.launch.py
group18ws/src/41068RS12025-Group18/drone_colour_detector/: CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  README.md  USAGE.md  package.xml  setup.cfg  setup.py
group18ws/src/41068RS12025-Group18/drone_colour_detector/drone_colour_detector/: __init__.py  hsv_calibrator.py  tree_detector.py
group18ws/src/41068RS12025-Group18/drone_colour_detector/launch/: tree_detection.launch.py
group18ws/src/41068RS12025-Group18/drone_controller/: CMakeLists.txt
group18ws/src/41068RS12025-Group18/drone_controller/src/: drone_controller.cpp  forest_mission_orchestrator.cpp
group18ws/src/41068RS12025-Group18/drone_ui/: package.xml
group18ws/src/41068RS12025-Group18/drone_ui/drone_ui/: drone_ui_code.py  drone_ui_node.py
group18ws/src/41068RS12025-Group18/lidar_tree_detector/src/: lidar_tree_detector_node.cpp
group18ws/src/41068RS12025-Group18/path_planner_cpp/: CMakeLists.txt  README.md  package.xml
group18ws/src/41068RS12025-Group18/path_planner_cpp/src/: planner_node.cpp
group18ws/src/41068RS12025-Group18/path_planner_cpp/srv/: PlanToGoal.srv
